--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -6,12 +6,9 @@
 </div>
 
 <% if @task.parent.nil? %>
-
-<br/>
-<%= link_to "new subtask", new_subtask_path(task_id: @task.id), remote: true, id: 'new-subtask-link' %>
-<div id="new-subtask">
-</div>
-
+  <%= link_to "new subtask", new_task_path(task_id: @task.id), remote: true, id: 'new-subtask-link' %>
+  <div id="new-subtask">
+  </div>
 <% end %>
 <hr/>
 <div id="subtasks" class="panel">
