--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -16,7 +16,7 @@
   <tr>
     <td><%= task.company.name %></td>
     <td><%= task.title %></td>
-    <td><%= task.schedule %></td>
+    <td><%= task.schedule.kind %></td>
     <td><%= task.parent ? task.parent.title : '' %></td>
     <td><%= link_to 'Show', task %></td>
     <td><%= link_to 'Edit', edit_task_path(task) %></td>
