--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -30,6 +30,13 @@
 
   <div class="large-4">
     <div class="field">
+      <%= f.label :user %>
+      <%= f.collection_select :user_id, User.order(:last_name, :first_name), :id, :full_name %>
+    </div>
+  </div>
+
+  <div class="large-4">
+    <div class="field">
       <%= f.label :title %>
       <%= f.text_field :title %>
     </div>
@@ -45,7 +52,7 @@
   <div id="scheduler" class="panel">
     <%= link_to_function 'Scheduler', '$("#scheduler-' + @task.id.to_s + '").toggle()' %>
     <%= f.fields_for :schedule do |build| %>
-      <%= render('scheduler', f: build, task: @task) %>
+      <%= render('scheduler', f: build, task: @task, ) %>
     <% end %>
   </div>
 
