--- a/app/views/tasks/_show_task.html.erb
+++ b/app/views/tasks/_show_task.html.erb
@@ -2,8 +2,11 @@
   <h3><%= task.title %></h3>
   <em><%= l task.created_at, format: :long_dateweek %></em>
   <br/>
+  <em>owned by: <%= task.user.full_name %></em>
+  <br/>
   <br/>
   <p><%= task.info %></p>
+  <p>Scheduled: <%= task.schedule.to_s %></p>
   <%= link_to 'Edit', edit_task_path(task), remote: true %> 
   <% if task.child? %>
     | <%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' }, remote: true %>
