--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,6 +31,8 @@
       <section class="top-bar-section">
         <ul class="right">
           <li class="divider"></li>
+          <li><%= link_to "Agenda", agenda_path %></li>
+          <li class="divider"></li>
           <li><%= link_to "Companies", companies_path %></li>
           <li class="divider"></li>
           <li><%= link_to "Tasks", tasks_path %></li>
