--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -8,18 +8,14 @@
     <th>Schedule</th>
     <th>Parent</th>
     <th></th>
-    <th></th>
-    <th></th>
   </tr>
 
 <% @tasks.each do |task| %>
   <tr>
-    <td><%= task.company.name %></td>
+    <td><%= link_to task.company.name, task %></td>
     <td><%= task.title %></td>
     <td><%= task.schedule %></td>
-    <td><%= task.parent ? task.parent.title : '' %></td>
-    <td><%= link_to 'Show', task %></td>
-    <td><%= link_to 'Edit', edit_task_path(task) %></td>
+    <td><%= task.parent ? task.parent.title : 'none' %></td>
     <td><%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
 <% end %>
