--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -5,13 +5,11 @@
     <th>Name</th>
     <th></th>
     <th></th>
-    <th></th>
   </tr>
 
 <% @companies.each do |company| %>
   <tr>
-    <td><%= company.name %></td>
-    <td><%= link_to 'Show', company %></td>
+    <td><%= link_to company.name, company %></td>
     <td><%= link_to 'Edit', edit_company_path(company) %></td>
     <td><%= link_to 'Destroy', company, method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
