--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,6 +36,8 @@
             <li class="divider"></li>
             <li><%= link_to "Companies", companies_path %></li>
             <li class="divider"></li>
+            <li><%= link_to "Categories", categories_path %></li>
+            <li class="divider"></li>
             <li><%= link_to "Tasks", tasks_path %></li>
             <li class="divider"></li>
             <% if user_signed_in? %>
