removed parent/child tasks and replaced with new status table. needs more testing.

--- a/app/views/tasks/create.js.erb
+++ b/app/views/tasks/create.js.erb
@@ -1,4 +1,4 @@
 $('#new-subtask').empty();
-$('#subtasks').prepend('<%= j render("show_task", task: @task) %>');
+$('#subtasks').prepend('<%= j render("show_status", status: @status) %>');
 $('#none-msg').hide();
 $('#new-subtask-link').show();
