--- a/app/views/tasks/new.js.erb
+++ b/app/views/tasks/new.js.erb
@@ -1,2 +1,2 @@
 $('#new-subtask-link').hide();
-$('#new-subtask').prepend('<%= j render("form") %>');
+$('#new-subtask').prepend('<%= j render("status_form") %>');
