--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -81,6 +81,6 @@
 
 <br />
 
-<%= link_to 'New Task', new_task_path %>
+<%= button_to 'New Task', new_task_path, :class => 'button', method: 'get' %>
 
 <%= debug params %> 
