--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -10,7 +10,7 @@
 <div id="new-status">
 </div>
 <hr/>
-<h2>News</h2>
+<h2>Notes</h2>
 <div id="statuses">
   <p id="none-msg" <%= !@subtasks.empty?() ? raw('style="display:none"') : '' %>>No updates</p>
   <% @subtasks.each do |s| %>
