--- a/app/views/tasks/_show_status.html.erb
+++ b/app/views/tasks/_show_status.html.erb
@@ -1,4 +1,4 @@
-<div id="status-<%=status.id%>" class="panel callout large-8">
+<div id="outer-status-<%=status.id%>" class="panel callout large-8">
   <h3><%= status.title %></h3>
   <em>Created: <%= l status.created_at, format: :long_dateweek %></em><br/>
   <em>Updated: <%= l status.updated_at, format: :long_dateweek %></em><br/>
