--- a/app/views/tasks/_status_form.html.erb
+++ b/app/views/tasks/_status_form.html.erb
@@ -20,15 +20,22 @@
     </div>
   </div>
 
-  <% @task.build_schedule %> 
-
-  <div id="scheduler">
-    <%= link_to('#', onclick: "toggle_tree('#scheduler-new', '#task-toggle-new')") do %>
-          <span id="task-toggle-new" class="ui-icon ui-icon-triangle-1-e left") ></span>Scheduler
+  <div>
+    <%= link_to('', onclick: "toggle_tree('#scheduler-status-#{@status.id}', '#status-toggle-#{@status.id}'); return false;") do %>
+          <span id="status-toggle-<%= @status.id %>" class="ui-icon ui-icon-triangle-1-e left") ></span>Scheduler
         <% end %>
-    <%= f.fields_for :schedule do |build| %>
-      <%= render('scheduler', f: build, task: @task) %>
+    <div id="scheduler-status-<%= @status.id %>" style="display:none">
+      <%= f.fields_for :schedule do |build| %>
+        <%= render('scheduler', f: build, task: @task) %>
+      <% end %>
+    </div>
+  </div>
+  <div class="button-group round even-2">
+    <%= f.submit :class => 'button' %>
+    <% if @status.new_record? %>
+      <%= button_to_function 'Cancel', raw('$("#new-status' + @status.id.to_s + '").empty(); $("#new-status-link").show()'), :class => 'button' %>
+    <% else %>
+      <%= button_to_function 'Cancel',  raw('$("#outer-status-' + @status.id.to_s + '").empty().append("' + j(render('show_status', status: @status, task:@task)) + '")'), :class => 'button' %>
     <% end %>
   </div>
-  <%= f.submit :class => 'button round' %>
 <% end %>
