--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,14 +32,22 @@
         </ul>
         <section class="top-bar-section">
           <ul class="right">
-            <li class="divider"></li>
-            <li><%= link_to "Agenda", agenda_path %></li>
-            <li class="divider"></li>
-            <li><%= link_to "Companies", companies_path %></li>
-            <li class="divider"></li>
-            <li><%= link_to "Categories", categories_path %></li>
-            <li class="divider"></li>
-            <li><%= link_to "Tasks", tasks_path %></li>
+            <% if user_signed_in? %>
+              <li class="divider"></li>
+              <li><%= link_to "Agenda", agenda_path %></li>
+            <% end %>
+            <% if user_signed_in? %>
+              <li class="divider"></li>
+              <li><%= link_to "Companies", companies_path %></li>
+            <% end %>
+            <% if user_signed_in? %>
+              <li class="divider"></li>
+              <li><%= link_to "Categories", categories_path %></li>
+            <% end %>
+            <% if  user_signed_in? %>
+              <li class="divider"></li>
+              <li><%= link_to "Tasks", tasks_path %></li>
+            <% end %>  
             <li class="divider"></li>
             <% if user_signed_in? %>
             <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
