scheduler working for news again

--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -49,7 +49,7 @@
     <%= link_to('#', onclick: "toggle_tree('#task-scheduler-#{@task.id}', '#task-toggle-#{@task.id}')") do %>
       <span id="task-toggle-<%=@task.id%>" class="ui-icon ui-icon-triangle-1-e left") ></span>Scheduler
     <% end %>
-    <div id="task-scheduler-<%= @task.id %>" class="task-scheduler-div" style="display:inline">
+    <div id="task-scheduler-<%= @task.id %>" class="task-scheduler-div" style="display:none">
       <%= f.fields_for :schedule do |build| %>
         <%= render('scheduler', f: build, kind: @task.schedule ? @task.schedule.kind : :none) %>
       <% end %>
