--- a/app/views/tasks/new_status.js.erb
+++ b/app/views/tasks/new_status.js.erb
@@ -1,2 +1,3 @@
 $('#new-status-link').hide();
 $('#new-status').prepend('<%= j render("status_form") %>');
+$(".task-scheduler-div").refreshSchedulerEvents();
