--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,18 @@
  *= require_tree .
  *= require jquery.ui.all
  */
+
+.headerrow {
+  background-color: #cccccc;
+  border: 1px solid #eeeeee;
+}
+
+.oddrow {
+  background-color: #ffffff;
+  border: 1px solid #eeeeee;
+}
+
+.evenrow {
+  background-color: #cccccc;
+  border: 1px solid #eeeeee;
+}
