--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -1,2 +1,8 @@
-<h1>Admin::Users#edit</h1>
-<p>Find me in app/views/admin/users/edit.html.erb</p>
+<h1>Edit User <%= @user.full_name %></h1>
+
+<%= form_for @user, url: admin_update_user_path do |f| %>
+  <%= render partial: 'form', locals: {f: f} %>
+  <%= f.submit "Update User", class: 'button' %>
+<% end %>
+
+
