--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,21 +36,21 @@
               <li class="divider"></li>
               <li><%= link_to "Agenda", agenda_path %></li>
             <% end %>
-            <% if user_signed_in? %>
+            <% if user_signed_in? && current_user.admin? %>
               <li class="divider"></li>
               <li><%= link_to "Companies", companies_path %></li>
-            <% end %>
-            <% if user_signed_in? %>
               <li class="divider"></li>
               <li><%= link_to "Categories", categories_path %></li>
-            <% end %>
-            <% if  user_signed_in? %>
+            <% end %>  
+            <% if user_signed_in? %>
               <li class="divider"></li>
               <li><%= link_to "Tasks", tasks_path %></li>
             <% end %>  
             <li class="divider"></li>
             <% if user_signed_in? %>
-              <li><%= link_to 'Admin', admin_show_users_path %></li>
+              <% if current_user.admin? %>
+                <li><%= link_to 'Users', admin_show_users_path %></li>
+              <% end %>
               <li><%= link_to 'Change password', change_password_path %></li>
               <li><%= link_to "Sign Out (#{current_user.full_name})", destroy_user_session_path, method: :delete %></li>
             <% else %>
